# strategy

./: .cursorrules  .env  .env copy  .env.example  .env.vercel  .gitattributes  .gitignore  .vercel-trigger  .vercelignore  5bars-comprehensive-search-2025-09-22T03-12-27-849Z.json  5bars-coresignal-collection-2025-09-22T03-17-08-542Z.json  5bars-coresignal-enrichment-latest.json  5bars-linkedin-search-latest.json  AI-CONTEXT-FIX-SUMMARY.md  AI_AUDIT_PROMPT.md  AI_CHAT_DEBUGGING_GUIDE.md  AI_CONTEXT_BUILDING_BEST_PRACTICES.md  AI_CONTEXT_COMPLETE_TEST_RESULTS.md  AI_CONTEXT_FIX_SUMMARY.md  AI_CONTEXT_MCP_TEST_RESULTS.md  AI_DATA_ACCESS_SUMMARY.md  AI_RIGHT_PANEL_FIX.md  AI_RIGHT_PANEL_INVESTIGATION_AFTER_REVERT.md  AI_ROLE_DISCOVERY_IMPLEMENTATION_COMPLETE.md  ALTA_CONTACTS_IMPORT_FINAL_REPORT.md  API-KEYS-SETUP.md  API_PROVIDER_OPTIMIZATION_ANALYSIS.md  AUTHENTICATION_TEST_SETUP_COMPLETE.md  BUILD_SYSTEM.md  BUYER_GROUP_FIX_DIAGRAM.md  BUYER_GROUP_FIX_SUMMARY.md  BUYER_GROUP_TAB_LOADING_FIX.md  CALENDAR_SYNC_SETUP.md  CFO_CRO_Pipeline_7_Steps.md  COMPANY_ASSOCIATION_DEBUG.md  COMPANY_FIELD_AUDIT.md  COMPANY_FIELD_PERSISTENCE_FIX.md  COMPANY_PEOPLE_LINKING_FIX_SUMMARY.md  COMPANY_RECORD_FIX_SUMMARY.md  COMPLETE-AUDIT-RESULTS.md  (+119 more)
.cursor/: universal-record-template-diff.txt
__marketing/: -  MIGRATION_SUCCESS_REPORT.md  Monthly Mailing Campaign.docx  README_DATA_ENRICHMENT.md  TOP_ENGINEERS_PLUS_CONTEXT_MODEL.md  run_enrichment.sh  test_enrichment.sql  top_engineers_plus_conservative_enrichment.sql  top_engineers_plus_data_enrichment.sql  top_engineers_plus_fixed_enrichment.sql  top_engineers_plus_minimal_enrichment.sql  top_engineers_plus_simple_enrichment.sql
_data/: AI_CONTEXT_AUDIT_REPORT.md  DATABASE_SYNC_SUCCESS_REPORT.md  DATA_AUDIT_REPORT_2025.md  DATA_VALIDATION_REPORT_2025.md  DATA_VISIBILITY_SOLUTION.md  Exported Capsule Contacts 2025-08-29.xlsx  MIGRATION_COMPLETION_REPORT.md  Physical Mailer Campaign 2025-08-29.xlsx  README.md  TOP_AUDIT_REPORT_2025-10-01.json  UTC All Regions 2023.xlsx  data_cleanup.py  examine_data.py  (+12 more)
src-tauri/: .env  .gitignore  Cargo.toml  build-world-class-dmg.sh  tauri.conf.demo.json  tauri.conf.json  tauri.conf.v2.json
src-tauri/capabilities/: default.json
src-tauri/icons/: adrata-icon.icns  demo-icon.icns  icon.icns
src-tauri/migrations/: 001_initial_desktop_schema.sql
src-tauri/src/: desktop_api.rs  encode.rs  lib.rs  lib_minimal.rs  main.rs  menu.rs  speedrun.rs
src-tauri/src/api/: actions.rs  companies.rs  desktop.rs  people.rs  speedrun.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/browser/: mod.rs
src-tauri/src/calling/: mod.rs
src-tauri/src/data/: mod.rs
src-tauri/src/data/leads/: mod.rs
src-tauri/src/database/: auth.rs  calendar.rs  crm.rs  mod.rs  models.rs  speedrun.rs
src-tauri/src/database_init/: mod.rs
src-tauri/src/demo_scenarios/: mod.rs
src-tauri/src/email/: mod.rs
src-tauri/src/email_scanning/: mod.rs
src-tauri/src/human_capital/: mod.rs
src-tauri/src/monaco/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/sync/: commands.rs  mod.rs  models.rs  queue.rs
src-tauri/src/voice/: mod.rs
(+6890 files in other folders)
